force-app/main/default/objects/LandRegistry__c/LandRegistry__c.object-meta.xml
<CustomObject>
    <description>Autonumber</description>
    <label>Dati Catastali</label>
    <nameField>
        <displayFormat>LR-{00000000}</displayFormat>
        <label>Documental Envelope Attachment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dati Catastali</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>