force-app/main/default/objects/LandRegistry__c/fields/CodeMissingRegistryData__c.field-meta.xml
<CustomField>
    <fullName>CodeMissingRegistryData__c</fullName>
    <description>Codice assenza dati catastali</description>
    <label>Codice assenza dati catastali</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>da RD</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Immobile non accatastato</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Immobile non accatastabile</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Dati non forniti dal titolare</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Forniture temporanee</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Condominio</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Non presenti in SIEBEL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>