force-app/main/default/objects/LandRegistry__c/fields/DestinationUsage__c.field-meta.xml
<CustomField>
    <fullName>DestinationUsage__c</fullName>
    <description>Destinazione Uso</description>
    <label>Destinazione Uso</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>da RD</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Uso abitativo</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Immobile tenuto a disposizione</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Uso commerciale</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Locali adibiti a box</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Altri usi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>