force-app/main/default/objects/LandRegistry__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <defaultValue>DATEVALUE(&quot;4000-12-31&quot;)</defaultValue>
    <description>Data fine contratto</description>
    <label>Data fine contratto</label>
    <type>Date</type>
</CustomField>