force-app/main/default/objects/LandRegistry__c/fields/IsMigrated__c.field-meta.xml
<CustomField>
    <fullName>IsMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrato</label>
    <type>Checkbox</type>
</CustomField>