force-app/main/default/objects/LandRegistry__c/fields/LegalCity__c.field-meta.xml
<CustomField>
    <fullName>LegalCity__c</fullName>
    <description>Comune amministrativo</description>
    <label>Comune amministrativo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>