force-app/main/default/objects/LandRegistry__c/fields/LegalCityLookup__c.field-meta.xml
<CustomField>
    <fullName>LegalCityLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ricerca Comune amministrativo</label>
    <referenceTo>CityTechnicalData__c</referenceTo>
    <relationshipLabel>Dati Catastali LegalCity</relationshipLabel>
    <relationshipName>Dati_Catastali_LegalCity</relationshipName>
    <type>Lookup</type>
</CustomField>