force-app/main/default/objects/LandRegistry__c/fields/OfferCode__c.field-meta.xml
<CustomField>
    <fullName>OfferCode__c</fullName>
    <description>ID univoco della pratica</description>
    <label>Codice Offerta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>