force-app/main/default/objects/LandRegistry__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup all&apos;Order</description>
    <label>Ordine</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Dati Catastali</relationshipLabel>
    <relationshipName>Dati_Catastali</relationshipName>
    <type>Lookup</type>
</CustomField>