force-app/main/default/objects/LandRegistry__c/fields/ParticleSheet__c.field-meta.xml
<CustomField>
    <fullName>ParticleSheet__c</fullName>
    <description>Particella</description>
    <label>Particella</label>
    <length>50</length>
    <type>Text</type>
</CustomField>