force-app/main/default/objects/LandRegistry__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>Provincia ubicazione</description>
    <label>Provincia ubicazione</label>
    <length>2</length>
    <type>Text</type>
</CustomField>