force-app/main/default/objects/LandRegistry__c/fields/RegistryCategory__c.field-meta.xml
<CustomField>
    <fullName>RegistryCategory__c</fullName>
    <description>Categoria Catastale</description>
    <label>Categoria Catastale</label>
    <length>30</length>
    <type>Text</type>
</CustomField>