force-app/main/default/objects/LandRegistry__c/fields/RegistryCity__c.field-meta.xml
<CustomField>
    <fullName>RegistryCity__c</fullName>
    <description>Comune catastale</description>
    <label>Comune catastale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>