force-app/main/default/objects/LandRegistry__c/fields/RegistryCityCode__c.field-meta.xml
<CustomField>
    <fullName>RegistryCityCode__c</fullName>
    <description>Codice comune catastale</description>
    <label>Codice comune catastale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>