force-app/main/default/objects/LandRegistry__c/fields/RegistryCityLookup__c.field-meta.xml
<CustomField>
    <fullName>RegistryCityLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ricerca Comune catastale</label>
    <referenceTo>CityTechnicalData__c</referenceTo>
    <relationshipLabel>Dati Catastali</relationshipLabel>
    <relationshipName>Dati_Catastali</relationshipName>
    <type>Lookup</type>
</CustomField>