force-app/main/default/objects/LandRegistry__c/fields/RegistrySurface__c.field-meta.xml
<CustomField>
    <fullName>RegistrySurface__c</fullName>
    <description>Superficie Catastale</description>
    <label>Superficie Catastale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>