force-app/main/default/objects/LandRegistry__c/fields/SAPImplantCode__c.field-meta.xml
<CustomField>
    <fullName>SAPImplantCode__c</fullName>
    <description>Codice Impianto SAP</description>
    <label>Codice Impianto SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>