force-app/main/default/objects/LandRegistry__c/fields/SAPImplantCodeFormula__c.field-meta.xml
<CustomField>
    <fullName>SAPImplantCodeFormula__c</fullName>
    <formula>ServicePoint__r.SAPImplantCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Impianto SAP</label>
    <type>Text</type>
</CustomField>