force-app/main/default/objects/LandRegistry__c/fields/ServicePoint__c.field-meta.xml
<CustomField>
    <fullName>ServicePoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup al Service Point</description>
    <label>Punto di fornitura</label>
    <referenceTo>ServicePoint__c</referenceTo>
    <relationshipLabel>Dati Catastali</relationshipLabel>
    <relationshipName>Dati_Catastali</relationshipName>
    <type>Lookup</type>
</CustomField>