force-app/main/default/objects/LandRegistry__c/fields/Sheet__c.field-meta.xml
<CustomField>
    <fullName>Sheet__c</fullName>
    <description>Foglio</description>
    <label>Foglio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>