force-app/main/default/objects/LandRegistry__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Data inizio contratto</description>
    <label>Data inizio contratto</label>
    <type>Date</type>
</CustomField>