force-app/main/default/objects/LandRegistry__c/fields/Subaltern__c.field-meta.xml
<CustomField>
    <fullName>Subaltern__c</fullName>
    <description>Subalterno</description>
    <label>Subalterno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>