force-app/main/default/objects/LandRegistry__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Qualifica Titolare</description>
    <label>Qualifica Titolare</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Proprietario</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Usufruttuario</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Locatario</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Titolare di altri diritto su immobile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>