force-app/main/default/objects/LandRegistry__c/fields/UnitType__c.field-meta.xml
<CustomField>
    <fullName>UnitType__c</fullName>
    <description>Tipo unita</description>
    <label>Tipo unita</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Fabbricato</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Terreno</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>