force-app/main/default/objects/LandRegistry__c/fields/UrbanSection__c.field-meta.xml
<CustomField>
    <fullName>UrbanSection__c</fullName>
    <description>Sezione urbana</description>
    <label>Sezione urbana</label>
    <length>50</length>
    <type>Text</type>
</CustomField>