force-app/main/default/objects/LandRegistry__c/recordTypes/HDT_RT_DatiCatastali.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_DatiCatastali</fullName>
    <active>true</active>
    <label>HDT_RT_DatiCatastali</label>
</RecordType>