force-app/main/default/objects/LandRegistry__c/recordTypes/HDT_RT_DatiCatastali_PraticaTARI.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_DatiCatastali_PraticaTARI</fullName>
    <active>true</active>
    <label>DatiCatastali - Pratica Ambiente</label>
</RecordType>