force-app/main/default/objects/LandRegistry__c/recordTypes/HDT_RT_DatiCatastali_TARI.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_DatiCatastali_TARI</fullName>
    <active>true</active>
    <label>HDT_RT_DatiCatastali_TARI</label>
</RecordType>